--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,8 +6,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/metadb?createDatabaseIfNotExist=true
-    username: root
+    url: jdbc:mysql://localhost:3308/metadb?createDatabaseIfNotExist=true
+    username: docker_test
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
   h2:
