--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -46,7 +46,7 @@ jobs:
           cp build/libs/*.jar deploy/application.jar
           cp Procfile deploy/Procfile
           cp -r .ebextensions deploy/.ebextensions
-          cd deploy && zip -r deploy.zip
+          cd deploy && zip -r deploy.zip .
 
       # elastic beanstalk에 deploy.zip 보내기
       # IAM 사용자 필요
