--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -53,8 +53,8 @@ jobs:
       - name: Deploy to elastic beanstalk
         uses: einaregilsson/beanstalk-deploy@v22
         with:
-          aws-access-key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: aws1113-practice
           environment_name: Aws1113-practice-env
           version_label: github-action-${{ steps.current-time }}
